--- a/publish.yaml
+++ b/publish.yaml
@@ -59,6 +59,7 @@ Parameters:
           - AliyunFCDefaultRolePolicy
           - AliyunFCFullAccess
           - AliyunOTSFullAccess
+          - AliyunContainerRegistryReadOnlyAccess
     ossBucket:
       title: oss bucket
       type: string
