--- a/publish.yaml
+++ b/publish.yaml
@@ -26,6 +26,7 @@ Parameters:
       enum:
         - ap-northeast-1
         - cn-hangzhou
+        - cn-shanghai
     serviceName:
       title: 服务名
       type: string
