--- a/src/s.yaml
+++ b/src/s.yaml
@@ -4,8 +4,8 @@ access: default
 vars:
   region: "{{ region }}" 
   serviceName: "{{ serviceName }}"
-  agentImageUrl: "registry.{{region}}.aliyuncs.com/sd_api_public/sd-api:agent_v7-1.6"
-  proxyImageUrl: "registry.{{region}}.aliyuncs.com/sd_api_public/sd-api:proxy_v7"
+  agentImageUrl: "registry.{{region}}.aliyuncs.com/sd_api_public/sd-api:agent_v8-fc3"
+  proxyImageUrl: "registry.{{region}}.aliyuncs.com/sd_api_public/sd-api:proxy_v8-fc3"
   filemgrToken: "{{ filemgrToken || '' }}"
   extraArgs: "{{ extraArgs || '' }} --api --no-hashing"
   ots: "{{ otsInstance }}"
